--- a/mobilestyle.css
+++ b/mobilestyle.css
@@ -1,6 +1,8 @@
 /*
 This file is part of the LBSGK Template
 
+https://github.com/el-mejor/LBSGK
+
 Copyright (c) 2017 Lars Becker (lars@lars-b.net)
 */
 
