--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /*
 This file is part of the LBSGK Template
-
 https://github.com/el-mejor/LBSGK
-
 Copyright (c) 2017 Lars Becker (lars@lars-b.net)
 */
 
@@ -34,21 +32,35 @@ body {
 	min-height:			200px;
 	overflow: 			hidden;
 	margin:				0px;
+	background:			black;
 	border-radius:			10px 10px 0 0;
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.mainbannerbackimg {
-	zoom:				2;
+.mainbannerbackimg {	
+	position:			absolute;
+	left:				0;
 	border:				0;
 	border-radius:			5px 5px 0 0;
 	margin:				0;
 	max-width:			1280px;	
 	width:				100%;
-	/*max-height:			100%;*/
+	min-height:			100%;
 	height:				auto;
 	box-shadow:			none;
+	-webkit-transition: 		opacity 1.5s ease-in-out;
+        -moz-transition: 		opacity 1.5s ease-in-out;
+        -ms-transition: 		opacity 1.5s ease-in-out;
+        -o-transition: 			opacity 1.5s ease-in-out;
+        transition: 			opacity 1.5s ease-in-out;
+	opacity:			1;
+        z-index:			100;
 }
+.mainbannerbackimg.hidden {
+	opacity: 			0 !important;
+        z-index:			101 !important;
+}
+
 .mainbannerbackimg:hover {
 	transform:	scale(1.0);
 }
@@ -59,6 +71,7 @@ body {
 	margin:				10px;
 	border-radius:			1px 1px;
 	box-shadow:			none;
+        z-index:			200;
 }
 
 .mainbannerprev {
@@ -67,6 +80,7 @@ body {
 	margin-left			10px;	
 	border-radius:			3px 3px;
 	box-shadow:			0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+        z-index:			200;
 }
 .mainbannerprev:hover{
 	transform:	scale(1.5);
@@ -78,6 +92,7 @@ body {
 	top:				60px;
 	margin-left:			10px;
 	width:				100%;
+        z-index:			200;
 }
 
 .mainbannerheadertext {
@@ -86,12 +101,14 @@ body {
 	bottom:				10px;
 	margin-left:			140px;
 	width:				100%;
+        z-index:			200;
 }
 
 .mainbannerheaderprev {
 	position:			absolute;
 	height:				auto;
 	top:				10px;
+        z-index:			200;
 }
 
 hmain1, hmain2 {
