--- a/mobilestyle.css
+++ b/mobilestyle.css
@@ -7,12 +7,27 @@ Copyright (c) 2017 Lars Becker (lars@lars-b.net)
 */
 
 /* hide some boxes and modify appearance for mobile devices */
-@media all and (orientation: portrait) and (max-device-width: 768px)
+@media all and (orientation: portrait) and (max-device-width: 767px)
 {
 	body {
-		font-size:		200% !important;
+		font-size:		3vw !important;
 		/*-webkit-text-size-adjust: 200% !important;  */
 	}
+	
+	.mainframe {
+		margin:			0 !important;
+		padding:		0 !important;		
+		border-radius:		0 !important;
+		width:			100vw !important;
+		min-width:		100vw !important;
+		max-width:		100vw !important;
+		/*min-height:		50vh !important;*/
+		height:			auto !important;
+		background:		#ffffff !important;
+		box-shadow:		none !important;		
+	}
+	
+	
 	
 	.iconimg {
 	    	width:		2em !important;
@@ -21,6 +36,7 @@ Copyright (c) 2017 Lars Becker (lars@lars-b.net)
         } 
         
         .mainbanner {
+	        width:				100vw !important;
 		top:				0 !important;
 		height:				200px !important;
         }
@@ -31,91 +47,155 @@ Copyright (c) 2017 Lars Becker (lars@lars-b.net)
     		height:		auto !important;
         }
         
+        .advimg {
+		width:			auto !important;
+		max-width:		90vw !important;
+		height:			120px !important;		
+	}
+	
+	.unesco {
+		width:			auto !important;
+		max-width:		90vw !important;
+		height:			180px !important;
+	}
+        
         .topbox {
     		 width:			100vw;
-		 height:		2.3em;
+		 height:		3em;
 		 position:		sticky !important;
 	    	 position:		-webkit-sticky !important;		
 	}
 	
+	.footerdiv {
+		width:				100% !important;
+		font-size:			150% !important;	
+	}
+	
 	.mobilemenubuttonimg {
 		margin:			0 !important;
-		height:			1.6em !important;
-		width:			1.6em !important;		
+		height:			2.0em !important;
+		width:			2.0em !important;		
+	}
+	
+	h1, h2, h3 {
+		text-shadow: 		none !important;
+		/*width: 			95% !important;		*/
+		margin-left:		0px !important;
+		margin-right:		0px !important;
+		padding-left:		10px !important;
+	}
+	
+	.verb_logo {
+		max-width:	120px !important;
+		width:		20vw !important;
 	}
 }
 
-@media all and (orientation: landscape) and (max-device-width: 768px)
+@media all and (orientation: landscape) and (max-device-width: 767px)
 {
-	    body {
-		    font-size:		150% !important;
-		    /* -webkit-text-size-adjust: 150% !important;  */
-	    }
+    	body {
+	 	font-size:		1.4vw !important;
+	 	background:		linear-gradient(gray, dimgray);
+	 	background-attachment:	fixed;
+	}
 	
-	    .iconimg {
-	    	width:		3em !important;
-	    	height:		3em !important;
-	    	border:		3px solid dimgray !important;
+	.mainframe {
+		margin:			auto !important;
+		padding:		0 !important;
+		border-radius:		0 !important;
+		width:			85vw !important;
+		min-width:		85vw !important;
+		max-width:		85vw !important;
+		/*min-height:		85vh !important;*/
+		height:			auto !important;		
+		background:		#ffffff !important;
+		box-shadow:		none !important;	
+	}
+	
+    	.iconimg {
+    		width:		3em !important;
+    		height:		3em !important;
+    		border:		3px solid dimgray !important;
         } 
         
+        .advimg {
+		width:			auto !important;
+		max-width:		90vw !important;
+		height:			60px !important;
+	}
+	
+	.unesco {
+		width:			auto !important;
+		max-width:		90vw !important;
+		height:			120px !important;
+	}
+        
         .mainbanner {
+	 	    width:			100vw !important;
 		    top:			0 !important;
 		    height:			200px !important;
         }
         
         .img-responsive {
-        	max-width:	100vw !important;
+        	max-width:	80vw !important;
     		width:		25vw !important;
     		height:		auto !important;
         }
         
         .topbox {
     		 width:			100vw;
-		 height:		2.3em;
+		 height:		3em;
 		 position:		sticky !important;
 	    	 position:		-webkit-sticky !important;
 	}
 	
+	.footerdiv {
+		width:				50% !important;	
+	}
+	
 	.mobilemenubuttonimg {
 		margin:			0 !important;
-		height:			1.6em !important;
-		width:			1.6em !important;
+		height:			2.0em !important;
+		width:			2.0em !important;
+	}
+	h1, h2, h3 {
+		text-shadow: 		none !important;
+		/*width: 			95% !important;		*/
+		margin-left:		5px !important;
+		margin-right:		5px !important;
+	}
+	
+	.verb_logo {
+		max-width:	120px !important;
+		width:		5vw !important;
 	}
 }
 
-@media all and (max-device-width: 768px)
+@media all and (max-device-width: 767px)
 {
 body {
 	font-family: 		"Verdana" !important;
-	height:			100vh !important;
-	min-height:		100vh !important;
+	height:			100% !important;
+	min-height:		100% !important;
 	width:			100vw !important;
 	margin:			0 !important;
-	padding:		0 !important;
-	background:		#ffffff !important;
-	  		
+	padding:		0 !important;	  		
+}
+
+.mobilonly {
+	display:block !important;
 }
 
 input {
 	font-size:	1.2em;
 }
 
-.mainframe {
-	margin:			0 !important;
-	padding:		0 !important;
-	border-radius:		0 !important;
-	width:			100vw !important;
-	min-width:		100vw !important;
-	max-width:		100vw !important;
-	min-height:		50vh !important;
-	height:			auto !important;
-	max-height:		100vh !important;
-	background:		#ffffff !important;
-	box-shadow:		none !important;		
+.mainlogo {
+	width:				12vw !important;	
+	box-shadow:			none;
 }
 
-.mainbanner {
-	width:			100vw !important;
+.mainbanner {	
 	min-height:		25px !important;
 	border-radius:		0 !important;
 	shadow:			none !important;
@@ -129,17 +209,25 @@ input {
 	display: none;
 }
 
+.mainbannerlogo {
+	min-height: 0 !important;
+	height: 160px !important;
+	
+}
+
 .leftbox {
 	display:none;
 }
 .contentbox {
-	z-index:	90 !important;
+	/*z-index:	90 !important;*/
 	min-height:	50vh !important;
 	height:		auto !important;
 	margin:		0 !important;  
 	margin-top:	30px !important;
 	font-size:	1em !important;  
-	box-shadow:	none !important;    		    				
+	box-shadow:	none !important;  
+	padding-left: 40px !important;
+	padding-right: 40px !important;  		    				
 }
 
 .footerbox {
@@ -150,18 +238,14 @@ input {
 .img-responsive:hover {
     	transform:	scale(1.0) !important;
 }
-.verb-logo:hover {
+
+.verb_logo:hover {
 	transform:	scale(1.0) !important;
 }  
 
 .iconimg:hover {
 	transform:	scale(1.2);
 	opacity: 	1.5;
-}
-
-.advimg {
-	width:			auto !important;
-	height:			180px !important;
 }
 
 .menubox {display:none;}
@@ -172,14 +256,12 @@ input {
 	    z-index:			1001;
 	    top:			0 !important;
 	    display:			block !important;	    
-	    opacity:			1.0;
+	    opacity:			0.8;
 	    overflow:			hidden;
 	    left:			0;
 	    max-height:			100vh;
 	    margin: 			0;
 	    padding:			0.1em;
-	    /*transition:			height .3s ease-in-out;
-	    -webkit-transition: 	height .3s ease-in-out;*/
 	    font-size:			1em;
 	    background-color:		Black;
 	    color:			White;
@@ -199,19 +281,22 @@ input {
 	background-color:		Black !important;
 }
 .mobilemenuitem{
+
 	background-color:		Black !important;
 	font-size:			1.5em !important;    
 	/*border: 1px solid lime;	    	*/
 }
 
-.mlevmobile0 {    		
+.mlevmobile0 {   
+	line-height:	2.5em;
 	background-color:	Black;	
 	/*border: 1px solid red;		*/
 }
 
 .mlevmobile1 {display: none;}
 
-blockquote.bqinfo, div.m_news {
+/* blockquote.bqinfo, div.m_news { */
+blockquote.bqinfo {
 	background-color: 	#EEFFEE!important;	
 	border:			1px solid #99c68e !important;
 	border-left:		5px solid #99c68e !important;
@@ -221,15 +306,11 @@ blockquote.bqwarn {
 	background-color: 	#ffffc2 !important;	
 	border:			1px solid #fdd017 !important;
 	border-left:		5px solid #fdd017 !important;
-}
-    
-h1, h2, h3 {
-	text-shadow: 		none !important;
-	width: 			100% !important;		
-}
+}   
 
 h1 {
 	font-size:		2em !important;						
+	
 }	
 
 h2 {	
@@ -246,6 +327,14 @@ h3 {
 
 h3 ~ *:not(h3) {
 	margin-left:		0 !important;
+}
+
+#switchdesktop {
+	display: block !important;
+}
+
+.notmobile {
+	display: none;
 }
 
 }
