--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ https://github.com/el-mejor/LBSGK
 Copyright (c) 2017 Lars Becker (lars@lars-b.net)
 */
 
-/* development 
+/*
 div {
 	border: 1px dashed magenta !important;
 }
@@ -14,71 +14,151 @@ td{
 
 
 /* excluvely styled for non-mobile devices */
-@media all and (min-device-width: 768px)
+@media all and (min-device-width: 300px)
 {
 	body {	
+		margin:				0;
 		font-family: 			"Montserrat";
 		font-size:			90%;	
 		min-height:			100vh;		
-		background:			linear-gradient(#99c68e, #6CBB3C);
+/*		background:			linear-gradient(#99c68e, #6CBB3C);*/
+		background:			white;
 	}
 	
 	.topbox {display:none;}	
 	
 	.mobilonly {display:none;}
+	
 
+	
+	.iconset {
+		display: none;
+	}
+}
+
+/* excluvely styled for non-mobile devices */
+@media all and (min-device-width: 1024px) {
+	.mainframe:after {
+		content: url(https://www.sg-kornburg.de/wb2/media/graphics_homepage/kornburg.gif);
+		opacity: 0.05;
+		top: -100px;
+		left: -100px;
+		position: fixed;
+	}
 }
 
 /* diplay last div block of each page in second column when view width is larger than 1600px */
-@media all and (min-width: 1400px)
+/*@media all and (min-device-width: 1200px)
 {		
 	div.section:last-of-type {
 		position:	absolute !important;
 		top:		20px;
 		right:		20px;
-		width:		33% !important;
+		width:		25% !important;
 		float:		right !important;				
 	}
 	
 	div.section {
 		position:	relative;
-		width:		60%;
+		width:		70%;
 	}
 	
 	.m_news {
 		width:		54% !important;
 	}
+
+
+}*/
+
+@media all and (min-device-width: 600px)
+{
+
+
+	.mainframe {
+		margin:				0;
+		width:				100%;
+
+	}
 }
+
+@media all and (min-device-width: 1024px)
+{
+	.mainframe {
+		margin:				auto;
+		width:				80vw;
+		/*box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);	*/
+
+	}
+	
+	
+
+}
+
 
 .mainframe {
-	margin:				auto;
 	padding:			0px;
 	background:			white;
-	min-width:			1024px;
-	max-width:			1600px; /* increase if there'S a suitable main banner image but not larger than 1280 */
-	width:				90vw;	
-	border-radius:			10px 10px;
-	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	min-width:			600px;
+	/*max-width:			1280px;*/ /* increase if there'S a suitable main banner image but not larger than 1280 */
+	/*border:				1px solid dimgray;*/
 }
 
-.mainbanner {		
 
-	position:			relative;	
+
+.mainbanner {		
+	position:			relative;
+	left: 0;
+	top: 0;
 	width:				100%;
 	height:				200px;
-	min-height:			200px;
+
+
 	overflow: 			hidden;
 	margin:				0px;
 	background:			black;
-	border-radius:			10px 10px 0 0;
+
+	/*border-radius:		10px 10px 0 0;*/
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.swimlogocontainer {
+	position:fixed;
+	top:0;
+	right:0;
+	z-index:1002;
+	opacity: 0;
+	transition:opacity 1000ms;
+}
+
+.mainlogotria {
+	z-index:1003;
+	width: 0;
+	height: 0;
+	border-right: 5vw solid black;
+	border-top: 5vw solid black;
+	border-left: 5vw solid transparent;
+	border-bottom: 5vw solid transparent;
+}
+
+.mainlogo {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index:1004;
+	width:				8vw;
+	height:				auto;
+	border:				0;
+	border-radius:			0;
+	box-shadow:			none;
+	
+}
+
 
 .mainbannerbackimg {	
 	position:			absolute;
 	left:				0;
+	bottom: 			0;
 	border:				0;
-	border-radius:			5px 5px 0 0;
 	margin:				0;
 	max-width:			100%;
 	width:				100%;
@@ -90,11 +170,12 @@ td{
         -o-transition: 			opacity 2.5s ease-in-out;
         transition: 			opacity 2.5s ease-in-out;
 	opacity:			1;
-        z-index:			100;
+        z-index:			2000;
+        
 }
 .mainbannerbackimg.hidden {
 	opacity: 			0 !important;
-        z-index:			101 !important;
+        z-index:			2001 !important;
 }
 
 
@@ -103,32 +184,39 @@ td{
 	transform:	scale(1.0);
 }
 
+
+
+
 .mainbannerlogo {
 	width:				auto;
-	height:				160px;
+	height:				170px;
 	margin:				10px;
 	border-radius:			1px 1px;
 	box-shadow:			none;
-        z-index:			200;
+        z-index:			2002;
 }
+
+
 
 .mainbannerheaderlogo {
 	position:			absolute;
 	left:				0px;
-	top:				10px;
+	bottom:				10px;
 	margin-left:			10px;
 	width:				100%;
-        z-index:			200;
+        z-index:			2002;
+
 }
 
 .mainbannerheadertext {
 	position:			absolute;
 	margin:				0;
 	padding:			0;
-	left:				170px;
+	left:				200px;
 	bottom:				20px;
 	width:				100%;
-        z-index:			200;
+        z-index:			2002;
+
 }
 
 .mainbannerheaderprev {
@@ -137,7 +225,7 @@ td{
 	right:				10px;
 	text-align:			left;
 	height:				auto;
-        z-index:			2000;
+        z-index:			2005;
         border:				1px solid dimgray;
         border-radius:			5px 5px;
         opacity:			0.90;
@@ -155,6 +243,7 @@ hmain1, hmain2 {
 	color:				white;
 	text-transform: 		uppercase;
 	text-shadow: 			-1px 0px black, 0px -1px black, 1px 0px black, 0px 1px black, 1px 1px 4px #404040;
+
 }
 
 @media all and (min-width: 1280px)
@@ -175,6 +264,11 @@ hmain1, hmain2 {
 	hmain2 {
 		display: none;
 	}
+	
+	
+	/*.mainbannerlogo {
+		height: 160px;		
+	}*/
 }
 
 .leftbox {
@@ -186,7 +280,8 @@ hmain1, hmain2 {
 	margin-left:			20px;
 	width:				190px;
 	height:				100%;
-	padding:			0;		
+	padding:			0;	
+	z-index: 			2000;
 }
 
 .menubox {
@@ -195,9 +290,10 @@ hmain1, hmain2 {
 	width:				170px;
 	font-size:			1em;
 	background-color:		lightgray; /*#99c68e;*/
-	border-radius:			5px 5px;
+	/*border-top:			5px solid gold;*/
+	border-radius:			5px;
 	padding:			10px;
-	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);	
 }
 
 
@@ -206,32 +302,40 @@ hmain1, hmain2 {
 	margin-left:			0px;
 	width:				170px;
 	font-size:			1em;
-	background-color:		#99c68e;
-	border-radius:			5px 5px;	
+	background-color:		#ffffff;
+	border-radius:			5px;	
 	padding:			10px;
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .contentbox {
 	position:			relative;
-	margin-top:			10px;
+
 	margin-left:			230px;
 	margin-right:			20px;
 	min-height:			80vh;
 	font-size:			1em;
-	/*background-color:		white;	*/
+	background-color:		transparent;	
 	border-radius:			5px 5px;
 	padding:			10px;
 	/*box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
+
+
 
 .footerbox {
 	font-size:			0.8em;
 	text-align:			center;
 	margin-top:			10px;
 	padding:			10px;
+	padding-left:			10vw;
+	padding-right:			10vw;
+	border-top:			5px solid gold;
 	background-color:		lightgray;
-	border-radius:			0 0 10px 10px;
+}
+
+.footerdiv {
+	width:				30%;
 }
 
 img {
@@ -241,15 +345,41 @@ img {
 	box-shadow:		0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.menuimg {
+	display:		block;
+	background-color:	transparent;
+	padding: 15px;	
+	margin-left: 0;
+	margin-bottom: 10px;
+	width:			170px;
+	height:			auto;
+	
+}
+
+.unescoimgsmaller {
+	display:		block;
+	border-radius:		5px;
+	margin:			0px;
+	margin-top:		15px;
+	margin-left:		auto;
+	margin-right:		auto;
+	padding:		0px;
+	width:			50%;
+	max-width:		300px;
+	height:			auto;
+	box-shadow:		none;
+	z-index: -1;
+}
+
 .img-responsive {
 
 	height:			auto;
-	width:			25%;
+	width:			30%;
 
 }
 
 .img-responsive:hover {
-	transform:		scale(1.2);
+	
 }
 
 .startpageimgs {
@@ -263,21 +393,31 @@ img {
 
 .advimg {
 	width:			auto;
-	height:			120px;
+	height:			60px;
+	box-shadow:	none;
+	border-radius:		0;
 }
 
 .iconimg {
 	box-shadow:		none;
-	width:			64px;
-    	height:			64px;
+	width:			32px;
+    	height:			32px;
 	margin:			0;
 	padding:		5px;
 	border:			2px solid dimgray;
 	border-radius:		20%;
 }
-.iconimg:hover {
-	transform:	scale(1.02);
-	opacity: 	0.9;
+
+.iconimg {	
+	animation-name:		iconfadein;
+	animation-duration:	1s;	
+	animation-timing-function: ease-out;
+}
+
+
+@keyframes iconfadein {
+	0% { transform: scale(2); opacity: 0; }
+	100% { transform: scale(1); opacity: 1.0; }
 }
 
 .iconcontainer {
@@ -293,33 +433,41 @@ img {
 	margin:			0;
 }
 .verb_logo:hover {
-	transform:	scale(2.0);
+	transform:	scale(1.2);
 }
 
 blockquote {
 	margin-left:		30px;
-	padding:		2px;	
+	padding:		2px;
 	padding-left:		20px;
 	padding-right:		5px;
 	border-radius:		3px 3px;
 }
 
-blockquote.bqinfo, div.m_news {
+/* blockquote.bqinfo, div.m_news { */
+
+blockquote.bqinfo {
 	background-color: 	#fafafa !important;
-	border:			1px solid #199928 !important;
-	border-left:		5px solid #199928 !important;  /*#99c68e !important;*/
+	border:			1px solid gold !important;
+	border-left:		5px solid gold !important;  /*#99c68e !important;*/
 }
 
 blockquote.bqwarn {
 	background-color: 	#fafafa !important;	
-	border:			1px solid #fdd017 !important;
-	border-left:		5px solid #fdd017 !important;
+	border:			1px solid gold !important;
+	border-left:		5px solid gold !important;
 }
 
 .hidesection {
 	display:		none;
 }
 
+
+h2 {
+	/*background:		gold !important; 
+	color:			dimgray !important;*/
+	border-bottom:		2px solid gold;
+}
 
 h1, h2, h3 {
 	/*background:		inherit;*/
@@ -328,11 +476,21 @@ h1, h2, h3 {
 	text-transform: 	uppercase;
 	/*text-shadow: 		2px 2px 2px lightgray;*/
 	padding:		3px;
-	background:		#99c68e;
-	color:			white;
-	border-radius:		3px;
-	
+	/*background:		dimgray;
+	color:			white;*/
+	color:			dimgray;
+	/*border-radius:		3px;	*/
 }
+
+/*h1::before, h2::before, h3::Before {
+	content:		'A';
+	border:			1px solid gold;
+	border-radius:		50%;
+	background:		gold;
+	height:			5px;
+	width:			5px;
+	box-shadow:		0 0 10px red;
+}*/
 
 h1 {
 	font-size:		2em;	
@@ -364,6 +522,7 @@ h4 {
 	font-size:		1.3em;
 	font-weight:		bold;
 	text-transform: 	uppercase;
+	text-align:		left;
 }
 
 p {
@@ -404,6 +563,18 @@ a:hover {
 	border-radius: 		5px 5px;	
 }
 
+/*.mlev0 {
+	animation-name: 	menufadein;
+	animation-duration:	0.5s;
+	animation-timing-function: ease-out;
+	animation-fill-mode: 	backwards;
+}*/
+
+@keyframes menufadein {
+	from { opacity: 0; }
+	to { opacity: 1.0; }
+}
+
 .mlev1 {
 	background-color:	lightgray ;	
 	width:			100%;
@@ -432,4 +603,115 @@ a:hover {
 
 .menu-current:hover {
 	color:			dimgray !important;
+}
+
+.cookiedingsbums {
+	position: fixed;
+	position: -webkit-fixed;
+	top: 0;
+	left: 0;
+	opacity: 0.9;
+	width: 100%;
+	font-size: 1em;
+	font-weight: bold;
+	margin:	0px;
+	padding: 10px;
+	z-index: 100000;
+	border: 1px solid whitesmoke;
+	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ background-color: #f4f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
+ background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
+ background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
+ background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
+ background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
+ background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
+ overflow: auto;
+}
+
+.cookiedingsbumsText {
+   	padding: 3px;
+   	margin-bottom: 3px;
+}
+
+.cookiedingsbumsButtons {
+	float: right;
+	margin-right: 25px;
+}
+
+.cookiedingsbumsCloser  {
+
+   color: black !important;
+   font-size: 1.2em;
+   /*text-shadow: 0 1px 0 #fff;*/
+   cursor:pointer;
+   border-top:1px solid white; 
+   border-left:1px solid white; 
+   border-bottom:1px solid #7b92a9; 
+   border-right:1px solid #7b92a9; 
+   border-radius: 3px;
+   padding: 2px; 
+   margin: 3px;
+   
+}
+
+img.map {
+	float:right;width:40%;height:auto;box-shadow:none;margin-right:10%;
+	/*-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);*/
+}
+
+/*img.map:hover {
+	transform:	scale(2);
+	background:	white;
+	border: 	1px solid black;
+	border-radius:  4px;	
+	padding:	10px;
+}*/
+
+.cookiedingsbumsDS {
+border:1px solid #f9f68a; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #000000 !important;
+ background-color: #fcfac0; background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfac0), to(#f6f283));
+ background-image: -webkit-linear-gradient(top, #fcfac0, #f6f283);
+ background-image: -moz-linear-gradient(top, #fcfac0, #f6f283);
+ background-image: -ms-linear-gradient(top, #fcfac0, #f6f283);
+ background-image: -o-linear-gradient(top, #fcfac0, #f6f283);
+ background-image: linear-gradient(to bottom, #fcfac0, #f6f283);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#fcfac0, endColorstr=#f6f283);
+}
+
+.cookiedingsbumsDS:hover {
+ border:1px solid #f7f25f;
+ background-color: #faf68f; background-image: -webkit-gradient(linear, left top, left bottom, from(#faf68f), to(#f3ed53));
+ background-image: -webkit-linear-gradient(top, #faf68f, #f3ed53);
+ background-image: -moz-linear-gradient(top, #faf68f, #f3ed53);
+ background-image: -ms-linear-gradient(top, #faf68f, #f3ed53);
+ background-image: -o-linear-gradient(top, #faf68f, #f3ed53);
+ background-image: linear-gradient(to bottom, #faf68f, #f3ed53);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#faf68f, endColorstr=#f3ed53);
+}
+
+.cookiedingsbumsOK {
+border:1px solid #34740e; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #FFFFFF !important;
+ background-color: #4ba614; background-image: -webkit-gradient(linear, left top, left bottom, from(#4ba614), to(#008c00));
+ background-image: -webkit-linear-gradient(top, #4ba614, #008c00);
+ background-image: -moz-linear-gradient(top, #4ba614, #008c00);
+ background-image: -ms-linear-gradient(top, #4ba614, #008c00);
+ background-image: -o-linear-gradient(top, #4ba614, #008c00);
+ background-image: linear-gradient(to bottom, #4ba614, #008c00);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#4ba614, endColorstr=#008c00);
+}
+
+.cookiedingsbumsOK:hover {
+ border:1px solid #224b09;
+ background-color: #36780f; background-image: -webkit-gradient(linear, left top, left bottom, from(#36780f), to(#005900));
+ background-image: -webkit-linear-gradient(top, #36780f, #005900);
+ background-image: -moz-linear-gradient(top, #36780f, #005900);
+ background-image: -ms-linear-gradient(top, #36780f, #005900);
+ background-image: -o-linear-gradient(top, #36780f, #005900);
+ background-image: linear-gradient(to bottom, #36780f, #005900);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#36780f, endColorstr=#005900);
+}
+
+#switchmobile {
+	display: none;
+}
+
+#switchdesktop {
+	display: none;
 }
