--- a/style.css
+++ b/style.css
@@ -21,15 +21,12 @@ td{
 		font-family: 			"Montserrat";
 		font-size:			90%;	
 		min-height:			100vh;		
-/*		background:			linear-gradient(#99c68e, #6CBB3C);*/
 		background:			white;
 	}
 	
 	.topbox {display:none;}	
 	
 	.mobilonly {display:none;}
-	
-
 	
 	.iconset {
 		display: none;
@@ -47,29 +44,6 @@ td{
 	}
 }
 
-/* diplay last div block of each page in second column when view width is larger than 1600px */
-/*@media all and (min-device-width: 1200px)
-{		
-	div.section:last-of-type {
-		position:	absolute !important;
-		top:		20px;
-		right:		20px;
-		width:		25% !important;
-		float:		right !important;				
-	}
-	
-	div.section {
-		position:	relative;
-		width:		70%;
-	}
-	
-	.m_news {
-		width:		54% !important;
-	}
-
-
-}*/
-
 @media all and (min-device-width: 600px)
 {
 
@@ -86,12 +60,7 @@ td{
 	.mainframe {
 		margin:				auto;
 		width:				80vw;
-		/*box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);	*/
-
-	}
-	
-	
-
+    }
 }
 
 
@@ -99,8 +68,6 @@ td{
 	padding:			0px;
 	background:			white;
 	min-width:			600px;
-	/*max-width:			1280px;*/ /* increase if there'S a suitable main banner image but not larger than 1280 */
-	/*border:				1px solid dimgray;*/
 }
 
 
@@ -111,13 +78,9 @@ td{
 	top: 0;
 	width:				100%;
 	height:				200px;
-
-
 	overflow: 			hidden;
 	margin:				0px;
 	background:			black;
-
-	/*border-radius:		10px 10px 0 0;*/
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -166,26 +129,21 @@ td{
 	height:				auto;
 	box-shadow:			none;
 	-webkit-transition: 		opacity 2.5s ease-in-out;
-        -moz-transition: 		opacity 2.5s ease-in-out;
-        -o-transition: 			opacity 2.5s ease-in-out;
-        transition: 			opacity 2.5s ease-in-out;
+    -moz-transition: 		opacity 2.5s ease-in-out;
+    -o-transition: 			opacity 2.5s ease-in-out;
+    transition: 			opacity 2.5s ease-in-out;
 	opacity:			1;
-        z-index:			2000;
+    z-index:			2000;
         
 }
 .mainbannerbackimg.hidden {
 	opacity: 			0 !important;
-        z-index:			2001 !important;
+    z-index:			2001 !important;
 }
-
-
 
 .mainbannerbackimg:hover {
 	transform:	scale(1.0);
 }
-
-
-
 
 .mainbannerlogo {
 	width:				auto;
@@ -193,10 +151,8 @@ td{
 	margin:				10px;
 	border-radius:			1px 1px;
 	box-shadow:			none;
-        z-index:			2002;
+    z-index:			2002;
 }
-
-
 
 .mainbannerheaderlogo {
 	position:			absolute;
@@ -204,8 +160,7 @@ td{
 	bottom:				10px;
 	margin-left:			10px;
 	width:				100%;
-        z-index:			2002;
-
+    z-index:			2002;
 }
 
 .mainbannerheadertext {
@@ -215,8 +170,7 @@ td{
 	left:				200px;
 	bottom:				20px;
 	width:				100%;
-        z-index:			2002;
-
+    z-index:			2002;
 }
 
 .mainbannerheaderprev {
@@ -264,11 +218,6 @@ hmain1, hmain2 {
 	hmain2 {
 		display: none;
 	}
-	
-	
-	/*.mainbannerlogo {
-		height: 160px;		
-	}*/
 }
 
 .leftbox {
@@ -289,8 +238,7 @@ hmain1, hmain2 {
 	margin-left:			0px;
 	width:				170px;
 	font-size:			1em;
-	background-color:		lightgray; /*#99c68e;*/
-	/*border-top:			5px solid gold;*/
+	background-color:		lightgray; 
 	border-radius:			5px;
 	padding:			10px;
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);	
@@ -318,7 +266,6 @@ hmain1, hmain2 {
 	background-color:		transparent;	
 	border-radius:			5px 5px;
 	padding:			10px;
-	/*box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 
@@ -444,12 +391,10 @@ blockquote {
 	border-radius:		3px 3px;
 }
 
-/* blockquote.bqinfo, div.m_news { */
-
 blockquote.bqinfo {
 	background-color: 	#fafafa !important;
 	border:			1px solid gold !important;
-	border-left:		5px solid gold !important;  /*#99c68e !important;*/
+	border-left:		5px solid gold !important; 
 }
 
 blockquote.bqwarn {
@@ -464,33 +409,16 @@ blockquote.bqwarn {
 
 
 h2 {
-	/*background:		gold !important; 
-	color:			dimgray !important;*/
 	border-bottom:		2px solid gold;
 }
 
 h1, h2, h3 {
-	/*background:		inherit;*/
 	font-weight:		bold;
 	padding-left:		10px !important;
 	text-transform: 	uppercase;
-	/*text-shadow: 		2px 2px 2px lightgray;*/
 	padding:		3px;
-	/*background:		dimgray;
-	color:			white;*/
 	color:			dimgray;
-	/*border-radius:		3px;	*/
 }
-
-/*h1::before, h2::before, h3::Before {
-	content:		'A';
-	border:			1px solid gold;
-	border-radius:		50%;
-	background:		gold;
-	height:			5px;
-	width:			5px;
-	box-shadow:		0 0 10px red;
-}*/
 
 h1 {
 	font-size:		2em;	
@@ -499,21 +427,17 @@ h1 {
 }	
 
 h2 {	
-	/*border-bottom:		1px solid #199928;	*/
 	font-size:		1.5em;
 }
 
 h2 ~ *:not(h2) {
-	/*margin-left:		25px;*/
 }
 
 h3 {
-	/*border-bottom:		1px solid #199928;*/
 	font-size:		1.2em;		
 }
 
 h3 ~ *:not(h3) {
-	/*margin-left:		50px;*/
 }
 
 h4 {
@@ -562,13 +486,6 @@ a:hover {
 	padding-left:		5px;
 	border-radius: 		5px 5px;	
 }
-
-/*.mlev0 {
-	animation-name: 	menufadein;
-	animation-duration:	0.5s;
-	animation-timing-function: ease-out;
-	animation-fill-mode: 	backwards;
-}*/
 
 @keyframes menufadein {
 	from { opacity: 0; }
@@ -619,13 +536,13 @@ a:hover {
 	z-index: 100000;
 	border: 1px solid whitesmoke;
 	box-shadow:			0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
- background-color: #f4f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
- background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
- background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
- background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
- background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
- background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
- overflow: auto;
+    background-color: #f4f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
+    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
+    overflow: auto;
 }
 
 .cookiedingsbumsText {
@@ -656,56 +573,46 @@ a:hover {
 
 img.map {
 	float:right;width:40%;height:auto;box-shadow:none;margin-right:10%;
-	/*-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);*/
 }
 
-/*img.map:hover {
-	transform:	scale(2);
-	background:	white;
-	border: 	1px solid black;
-	border-radius:  4px;	
-	padding:	10px;
-}*/
-
 .cookiedingsbumsDS {
-border:1px solid #f9f68a; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #000000 !important;
- background-color: #fcfac0; background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfac0), to(#f6f283));
- background-image: -webkit-linear-gradient(top, #fcfac0, #f6f283);
- background-image: -moz-linear-gradient(top, #fcfac0, #f6f283);
- background-image: -ms-linear-gradient(top, #fcfac0, #f6f283);
- background-image: -o-linear-gradient(top, #fcfac0, #f6f283);
- background-image: linear-gradient(to bottom, #fcfac0, #f6f283);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#fcfac0, endColorstr=#f6f283);
+    border:1px solid #f9f68a; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #000000 !important;
+     background-color: #fcfac0; background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfac0), to(#f6f283));
+     background-image: -webkit-linear-gradient(top, #fcfac0, #f6f283);
+     background-image: -moz-linear-gradient(top, #fcfac0, #f6f283);
+     background-image: -ms-linear-gradient(top, #fcfac0, #f6f283);
+     background-image: -o-linear-gradient(top, #fcfac0, #f6f283);
+     background-image: linear-gradient(to bottom, #fcfac0, #f6f283);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#fcfac0, endColorstr=#f6f283);
 }
 
 .cookiedingsbumsDS:hover {
- border:1px solid #f7f25f;
- background-color: #faf68f; background-image: -webkit-gradient(linear, left top, left bottom, from(#faf68f), to(#f3ed53));
- background-image: -webkit-linear-gradient(top, #faf68f, #f3ed53);
- background-image: -moz-linear-gradient(top, #faf68f, #f3ed53);
- background-image: -ms-linear-gradient(top, #faf68f, #f3ed53);
- background-image: -o-linear-gradient(top, #faf68f, #f3ed53);
- background-image: linear-gradient(to bottom, #faf68f, #f3ed53);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#faf68f, endColorstr=#f3ed53);
+     border:1px solid #f7f25f;
+     background-color: #faf68f; background-image: -webkit-gradient(linear, left top, left bottom, from(#faf68f), to(#f3ed53));
+     background-image: -webkit-linear-gradient(top, #faf68f, #f3ed53);
+     background-image: -moz-linear-gradient(top, #faf68f, #f3ed53);
+     background-image: -ms-linear-gradient(top, #faf68f, #f3ed53);
+     background-image: -o-linear-gradient(top, #faf68f, #f3ed53);
+     background-image: linear-gradient(to bottom, #faf68f, #f3ed53);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#faf68f, endColorstr=#f3ed53);
 }
 
 .cookiedingsbumsOK {
-border:1px solid #34740e; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #FFFFFF !important;
- background-color: #4ba614; background-image: -webkit-gradient(linear, left top, left bottom, from(#4ba614), to(#008c00));
- background-image: -webkit-linear-gradient(top, #4ba614, #008c00);
- background-image: -moz-linear-gradient(top, #4ba614, #008c00);
- background-image: -ms-linear-gradient(top, #4ba614, #008c00);
- background-image: -o-linear-gradient(top, #4ba614, #008c00);
- background-image: linear-gradient(to bottom, #4ba614, #008c00);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#4ba614, endColorstr=#008c00);
+    border:1px solid #34740e; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:1.2em;padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3); color: #FFFFFF !important;
+     background-color: #4ba614; background-image: -webkit-gradient(linear, left top, left bottom, from(#4ba614), to(#008c00));
+     background-image: -webkit-linear-gradient(top, #4ba614, #008c00);
+     background-image: -moz-linear-gradient(top, #4ba614, #008c00);
+     background-image: -ms-linear-gradient(top, #4ba614, #008c00);
+     background-image: -o-linear-gradient(top, #4ba614, #008c00);
+     background-image: linear-gradient(to bottom, #4ba614, #008c00);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#4ba614, endColorstr=#008c00);
 }
 
 .cookiedingsbumsOK:hover {
- border:1px solid #224b09;
- background-color: #36780f; background-image: -webkit-gradient(linear, left top, left bottom, from(#36780f), to(#005900));
- background-image: -webkit-linear-gradient(top, #36780f, #005900);
- background-image: -moz-linear-gradient(top, #36780f, #005900);
- background-image: -ms-linear-gradient(top, #36780f, #005900);
- background-image: -o-linear-gradient(top, #36780f, #005900);
- background-image: linear-gradient(to bottom, #36780f, #005900);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#36780f, endColorstr=#005900);
+     border:1px solid #224b09;
+     background-color: #36780f; background-image: -webkit-gradient(linear, left top, left bottom, from(#36780f), to(#005900));
+     background-image: -webkit-linear-gradient(top, #36780f, #005900);
+     background-image: -moz-linear-gradient(top, #36780f, #005900);
+     background-image: -ms-linear-gradient(top, #36780f, #005900);
+     background-image: -o-linear-gradient(top, #36780f, #005900);
+     background-image: linear-gradient(to bottom, #36780f, #005900);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#36780f, endColorstr=#005900);
 }
 
 #switchmobile {
