bugfix mobile/desktop view 2

--- a/currvers.css
+++ b/currvers.css
@@ -7,6 +7,6 @@ Copyright (c) 2019 Lars Becker (lars@lars-b.net)
 */
 
 .footerbox::after {    
-    content: "Design & Realisierung Lars Becker - LBSGK V3.5.2"; 
+    content: "Design & Realisierung Lars Becker - LBSGK V3.5.2fix2"; 
     font-size: 0.7em;    
 }
