--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ border: 1px dashed lime !important;
     left: 	0;
     bottom: 0;
     border:	0;
+    border-radius: 0;
     margin:	0;
     max-width: 100%;
     width: 100%;
