--- a/style.css
+++ b/style.css
@@ -263,6 +263,12 @@ hmain1, hmain2 {
     padding: 10px;
 }
 
+.TopMessageBox {
+	border: 4px solid red;
+	padding: 20px;
+	background: #ccc;
+}
+
 .footerbox {
     font-size: 0.8em;
     text-align: center;
@@ -355,6 +361,12 @@ img {
     animation-timing-function: ease-out;
 }
 
+.coronaDateIcon {
+	height: 1em;
+	border: none;
+	box-shadow: none;                        
+	vertical-align: middle;
+}
 
 @keyframes iconfadein {
     0% { 
